# neuromesh

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  tmp_jobs2.json
.devcontainer/: devcontainer.json
.github/workflows/: ai-model-promotion.yml  ci.yml  experimental-ci.yml  rust-ci.yml  security-scan-pipeline.yml
apps/agent-ebpf-sensor/: Cargo.toml  Dockerfile  build.rs
apps/agent-ebpf-sensor/benches/: detection_pipeline.rs
apps/agent-ebpf-sensor/ebpf/: Cargo.toml  rust-toolchain.toml
apps/agent-ebpf-sensor/ebpf/src/: main.rs
apps/agent-ebpf-sensor/src/: bpf_pin.rs  btf_offsets.rs  bytecode_attestation.rs  integrity.rs  lib.rs  lsm_decision.rs  lsm_pin.rs  main.rs  normalizer.rs  path_deny.rs  pipeline.rs  policy_sync.rs  rules.rs  shutdown.rs  telemetry_stream.rs  wasm_policy.rs
apps/agent-ebpf-sensor/src/bpf/: bpf_helpers.h  bpf_tracing.h  exec_event.h  network_filter.bpf.c  sys_exec.bpf.c  vmlinux.h
apps/agent-ebpf-sensor/src/bpf/bpf/: bpf_core_read.h  bpf_tracing.h
apps/agent-ebpf-sensor/src/ingestion/: channel.rs  encoder.rs  kafka_producer.rs  mod.rs
apps/agent-ebpf-sensor/src/mocks/: mod.rs  ringbuf.rs  telemetry_source.rs
apps/agent-ebpf-sensor/src/monitoring/: correlation.rs  event.rs  exec_mapper.rs  mod.rs  network_event.rs  network_monitor.rs  process_monitor.rs  ringbuf_decode.rs
apps/agent-ebpf-sensor/src/observability/: health.rs  metrics.rs  mod.rs  prometheus.rs
apps/agent-ebpf-sensor/tests/: chaos_engineering_test.rs  event_parser_fuzz_test.rs  execve_stress_test.rs
apps/agent-ebpf-sensor/tests/common/: mod.rs  stress_profile.rs
apps/agent-ebpf-sensor/tests/fixtures/btf/: README.md
apps/ai-threat-detector/: Dockerfile  README.md  bandit.json  main.py  requirements.txt
apps/ai-threat-detector/src/: __init__.py
apps/ai-threat-detector/src/inference/: __init__.py  anomaly_pipeline.py  gnn_evaluator.py
apps/ai-threat-detector/src/streaming/: __init__.py  kafka_consumer.py
apps/ai-threat-detector/tests/: test_pipeline.py
apps/k8s-admission-webhook/: Dockerfile  README.md  go.mod  go.sum
apps/k8s-admission-webhook/src/: main.go
apps/k8s-admission-webhook/src/mutation/: sidecar_injector.go  sidecar_injector_test.go
apps/k8s-admission-webhook/src/validation/: image_signature.go  image_signature_test.go  verifier.go  verifier_test.go
apps/security-dashboard/: .env.example  README.md  eslint.config.mjs  next.config.ts  package.json
apps/security-dashboard/src/: middleware.ts
apps/security-dashboard/src/api/: index.ts
apps/security-dashboard/src/api/fast-path/: index.ts  subscriber.ts  topology.ts
apps/security-dashboard/src/api/slow-path/: fetcher.ts  index.ts
apps/security-dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/security-dashboard/src/app/dashboard/: layout.tsx  page.tsx
apps/security-dashboard/src/app/dashboard/k8s-compliance/: page.tsx
apps/security-dashboard/src/app/dashboard/threat-hunting/: page.tsx
apps/security-dashboard/src/app/dashboard/zero-trust-graph/: page.tsx
apps/security-dashboard/src/app/forbidden/: page.tsx
apps/security-dashboard/src/features/k8s-compliance/: index.ts  types.ts
apps/security-dashboard/src/features/k8s-compliance/api/: ControlPlaneClient.ts
apps/security-dashboard/src/features/k8s-compliance/components/: K8sCompliancePanel.tsx
apps/security-dashboard/src/features/k8s-compliance/hooks/: useK8sCompliance.ts
apps/security-dashboard/src/features/k8s-compliance/store/: k8sAdmissionStore.ts
apps/security-dashboard/src/features/threat-hunting/: index.ts
apps/security-dashboard/src/features/threat-hunting/api/: QueryService.ts  index.ts
apps/security-dashboard/src/features/threat-hunting/components/: QueryHistoryProviderClient.tsx  ThreatHuntingPanel.tsx  ThreatHuntingTerminal.tsx
apps/security-dashboard/src/features/threat-hunting/hooks/: index.ts  queryHistoryStore.ts  useQueryHistory.tsx  useTerminalBuffer.ts  useThreatHuntingTerminal.ts
apps/security-dashboard/src/features/threat-hunting/parser/: CommandParser.ts  index.ts
apps/security-dashboard/src/features/zero-trust-graph/: index.ts  types.ts
apps/security-dashboard/src/features/zero-trust-graph/components/: ZeroTrustGraphPanel.tsx
apps/security-dashboard/src/hooks/: useIsMounted.ts
apps/security-dashboard/src/lib/auth/: rbac.ts  session.ts
apps/security-dashboard/src/lib/security/: sanitize.ts
apps/security-dashboard/src/lib/store/: frozen-snapshots.ts
apps/security-dashboard/src/providers/: AuthProvider.tsx  TelemetryProvider.tsx  index.ts
apps/zt-policy-engine/: Dockerfile  README.md  go.mod  go.sum
apps/zt-policy-engine/cmd/server/: main.go
apps/zt-policy-engine/internal/evaluator/: opa_eval.go  opa_eval_test.go
apps/zt-policy-engine/internal/evaluator/policies/: execution.rego
apps/zt-policy-engine/internal/identity/: spiffe_validator.go  spiffe_validator_test.go
apps/zt-policy-engine/internal/middleware/: cors.go
apps/zt-policy-engine/internal/policybundle/: auth.go  bundle.go  bundle_test.go
apps/zt-policy-engine/internal/query/: search.go
deploy/kubernetes/: neuromesh-agent.yaml
deploy/kubernetes/admission/: README.md  neuromesh-admission-validating-webhook.yaml  neuromesh-admission-webhook-deployment.yaml  neuromesh-admission-webhook-service.yaml
docs/: RELEASE_v0.1.0-core.md  performance-baseline.md  threat-model.md
docs/architecture-decision-records/: adr-001-lsm-vs-tracepoint.md
scripts/: demo_core.sh  manual_verify_lsm_pin.sh  manual_verify_runtime_integrity.sh  mock_ebpf_stream.py  simulate_attack.sh
scripts/benchmarks/: events_per_second.sh
scripts/ci/: generate_bytecode_manifest.sh  verify_ebpf_bytecode.sh
scripts/e2e/: validate_gnn_detection.sh
scripts/red-team/: README.md  simulate_tmp_payload.sh
tests/: Cargo.toml
tests/src/: fixtures.rs  lib.rs  mocks.rs
tests/tests/: data_normalizer_integration.rs  ingestion_mock.rs  pipeline_integration.rs  rule_engine_integration.rs
(+3 files in other folders)
