[workspace]
resolver = "2"
members = [
    "apps/agent-ebpf-sensor",
    "packages/neuromesh-common",
    "packages/proto-definitions",
    "packages/telemetry",
    "tests",
]
exclude = [
    "apps/agent-ebpf-sensor/ebpf",
]

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.package]
edition = "2021"
version = "0.1.0"
