[package]
name = "neuromesh-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
agent-ebpf-sensor = { path = "../apps/agent-ebpf-sensor" }
neuromesh-common = { path = "../packages/neuromesh-common", features = ["user"] }
serde_json = "1.0"
