[package]
name = "neuromesh-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
agent-ebpf-sensor = { path = "../apps/agent-ebpf-sensor" }
neuromesh-common = { path = "../packages/neuromesh-common", features = ["user"] }
neuromesh-proto = { path = "../packages/proto-definitions" }
prost = "0.13"
serde_json = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "sync"] }
