[package]
name = "agent-ebpf-sensor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "agent_ebpf_sensor"
path = "src/lib.rs"

[[bin]]
name = "agent-ebpf-sensor"
path = "src/main.rs"
required-features = ["orchestrator"]

[[bin]]
name = "verify-ebpf"
path = "src/bin/verify_ebpf.rs"

[features]
default = []
orchestrator = ["kafka-stream", "kafka-ingestion", "dep:tracing-subscriber"]
kafka-stream = ["dep:rskafka"]
kafka-ingestion = ["dep:rdkafka"]

[dependencies]
neuromesh-common = { path = "../../packages/neuromesh-common", default-features = false, features = ["user"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aya = "0.14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tokio = { version = "1.36", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
    "time",
    "io-util",
    "sync",
] }
dashmap = "6.1"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
neuromesh-proto = { path = "../../packages/proto-definitions" }
prost = "0.13"
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
rskafka = { version = "0.6", optional = true }
tokio-util = "0.7"

[package.metadata.coverage]
minimum-line-coverage = 70

[dev-dependencies]
criterion = { workspace = true }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time"] }

[[bench]]
name = "detection_pipeline"
harness = false
