[package]
name = "agent-ebpf-sensor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "agent_ebpf_sensor"
path = "src/lib.rs"

[[bin]]
name = "agent-ebpf-sensor"
path = "src/main.rs"
required-features = ["orchestrator"]

[[bin]]
name = "verify-ebpf"
path = "src/bin/verify_ebpf.rs"

[features]
default = []
orchestrator = [
    "kafka-stream",
    "kafka-ingestion",
    "dep:tracing-subscriber",
    "dep:prometheus",
    "dep:axum",
]
kafka-stream = ["dep:rskafka"]
kafka-ingestion = ["dep:rdkafka"]

[dependencies]
neuromesh-common = { path = "../../packages/neuromesh-common", default-features = false, features = ["user"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aya = "0.14.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tokio = { version = "1.36", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
    "time",
    "io-util",
    "sync",
] }
dashmap = "6.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
neuromesh-proto = { path = "../../packages/proto-definitions" }
prost = "0.13"
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
rskafka = { version = "0.6", optional = true }
tokio-util = "0.7"
prometheus = { version = "0.14", optional = true }
axum = { version = "0.7", optional = true }
# Narrow crypto for Issue #44 Phase 1 bytecode attestation:
# verify Cosign static-key detached signatures (sign-blob) over the manifest.
# ECDSA P-256 is Cosign's default key type; Ed25519 matches the webhook's
# LoadVerifier key-type surface. Intentionally NOT pulling sigstore/cosign
# crates — verify-only, same dependency-minimalism bar as PR #47 on the Go side.
sha2 = "0.10"
base64 = "0.22"
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pem", "pkcs8", "std"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "pkcs8", "pem", "rand_core"] }

[package.metadata.coverage]
minimum-line-coverage = 70

[dev-dependencies]
criterion = { workspace = true }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-util = "0.7"
rand_core = { version = "0.6", features = ["getrandom"] }

[[test]]
name = "chaos_engineering_test"
path = "tests/chaos_engineering_test.rs"
required-features = ["orchestrator"]

[[bench]]
name = "detection_pipeline"
harness = false
