[package]
name = "agent-ebpf-sensor-ebpf"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
aya-ebpf = "0.1.0"
aya-ebpf-bindings = "0.1.2"
aya-log-ebpf = "0.1.0"
neuromesh-common = { path = "../../../packages/neuromesh-common", default-features = false }

# Setări vitale pentru a genera un cod eBPF curat, acceptat de Kernel-ul Linux
[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
